tests/sksl/errors/SwizzleOnlyLiterals.dsl.glsl
### Compilation failed:

error: type 'float' does not have a field named '0'

1 error
